# peclasses

./: .coveragerc  .flake8  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-package.yml  tests.yml
examples/: annotated_structure.py
peclasses/: annotated_structure.py  bisect_helper.py  pe_classes.py  peclasses.py  portable_executable.py  relocation_table.py  section_table.py  utilities.py
tests/: test_annotated_structure.py  test_pe_classes.py  test_peclasses.py  test_portable_executable.py  test_relocation_table.py  test_section_table.py
