[tool.poetry]
name = "peclasses"
version = "0.4.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ruff = "^0.8.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-cov = "^5.0.0"
flake8 = "^5.0.4"
mypy = "^1.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
